--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-rnr",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "dev": "expo start -c",
@@ -31,9 +31,9 @@
     "clsx": "^2.1.0",
     "expo": "^52.0.25",
     "expo-image": "~2.0.7",
-    "expo-linking": "~7.0.4",
+    "expo-linking": "~7.0.5",
     "expo-navigation-bar": "~4.0.7",
-    "expo-router": "~4.0.16",
+    "expo-router": "~4.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "^0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -55,7 +55,9 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "expo-constants": "~17.0.8",
+    "expo-blur": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
