refactor: Adicionar uma nova variavel de ambiente para o prefixo da api, fazendo com que não seja mais necessario declara-la em cada rota

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_API_URL="sua_url_aqui"
+EXPO_PUBLIC_API_URL="sua_url_aqui (http://192.168.0.99:3333)"
+EXPO_PUBLIC_API_PREFIX="prefixo_da_api (/api/)"
