--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-EXPO_PUBLIC_API_URL="sua_url_aqui (http://192.168.0.99:3333)"
+EXPO_PUBLIC_API_BASE_URL="sua_url_aqui (http://192.168.0.99:3333)"
 EXPO_PUBLIC_API_PREFIX="prefixo_da_api (/api/)"
