feat: Adiciona uma permissao pra tu conseguir fazer a request

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@
 EXPO_PUBLIC_API_BASE_URL="sua_url_aqui"
 # Example prefix: /api/
 EXPO_PUBLIC_API_PREFIX="prefixo_da_api"
+# Aqui tu coloca o UUID da permissão do usuario poder realizar testes
+EXPO_PUBLIC_API_SEE_TESTS_PERMISSION="UUID_DA_PERMISSAO"
