--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "zod": "^3.24.3",
     "zustand": "^4.4.7",
     "expo-constants": "~17.0.8",
-    "expo-blur": "~14.0.3"
+    "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
+    "expo-media-library": "~17.0.6",
+    "expo-av": "~15.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
