--- a/app.json
+++ b/app.json
@@ -36,7 +36,18 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-secure-store"],
+    "plugins": [
+      "expo-router",
+      "expo-secure-store",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Esse aplicativo precisa acessar sua camera para o sistema de monitoria durante avaliações.",
+          "microphonePermission": "Esse aplicativo precisa acessar seu microfone para o sistema de monitoria durante avaliações.",
+          "recordAudioAndroid": true
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
