--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "app-rnr",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "overrides": {
+    "lucide-react-native": {
+      "react": "$react"
+    }
+  },
   "scripts": {
     "dev": "expo start -c",
     "dev:web": "expo start -c --web",
@@ -18,7 +23,7 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.3.0",
     "@hookform/resolvers": "^5.0.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "~1.1.0",
     "@rn-primitives/portal": "~1.1.0",
@@ -29,43 +34,43 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "expo": "^52.0.25",
-    "expo-av": "~15.0.2",
-    "expo-blur": "~14.0.3",
-    "expo-camera": "~16.0.18",
-    "expo-constants": "~17.0.8",
-    "expo-image": "~2.0.7",
-    "expo-linking": "~7.0.5",
-    "expo-media-library": "~17.0.6",
-    "expo-navigation-bar": "~4.0.7",
-    "expo-router": "~4.0.20",
-    "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "^0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
-    "lucide-react-native": "^0.378.0",
+    "expo": "^53.0.0",
+    "expo-av": "~15.1.7",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.10",
+    "expo-constants": "~17.1.7",
+    "expo-image": "~2.3.2",
+    "expo-linking": "~7.1.7",
+    "expo-media-library": "~17.1.7",
+    "expo-navigation-bar": "~4.2.7",
+    "expo-router": "~5.1.3",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
+    "lucide-react-native": "^0.417.0",
     "nativewind": "^4.1.23",
     "phosphor-react-native": "^2.3.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.56.0",
-    "react-native": "0.76.9",
+    "react-native": "0.79.5",
     "react-native-css-interop": "^0.1.22",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3",
     "zustand": "^4.4.7",
-    "expo-build-properties": "~0.13.3"
+    "expo-build-properties": "~0.14.8"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
     "eslint": "^9.25.0",
