--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo": "^53.0.0",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
     "expo-camera": "~16.1.10",
     "expo-constants": "~17.1.7",
     "expo-image": "~2.3.2",
@@ -50,6 +51,7 @@
     "expo-system-ui": "~5.0.10",
     "lucide-react-native": "^0.417.0",
     "nativewind": "^4.1.23",
+    "peerjs": "^1.5.5",
     "phosphor-react-native": "^2.3.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -62,11 +64,11 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
+    "react-native-webrtc": "^124.0.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.3",
-    "zustand": "^4.4.7",
-    "expo-build-properties": "~0.14.8"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
